fixed scrollbar issue

--- a/src/styles/body.scss
+++ b/src/styles/body.scss
@@ -13,6 +13,7 @@
   color: var(--text-color);
   min-height: 100vh;
   width: 100vw;
+  max-width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: column;
